--- a/Praticando/css/style.css
+++ b/Praticando/css/style.css
@@ -3,6 +3,14 @@ body, h1, h2, ul, li, p, dd, dt, dl {
   padding: 0px;
 }
 
+html.textomaior {
+  font-size: 150%;
+}
+
+.azul {
+  background: teal;
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -35,7 +43,7 @@ body {
 
 .menu li a {
   display: block;
-  padding: 10px;
+  padding: 15px 10px;
   margin-right: 10px;
   color: #222;
   text-decoration: none;
