--- a/Praticando/css/style.css
+++ b/Praticando/css/style.css
@@ -1,22 +1,6 @@
-body,
-h1,
-h2,
-ul,
-li,
-p,
-dd,
-dt,
-dl {
+body, h1, h2, ul, li, p, dd, dt, dl {
   margin: 0px;
   padding: 0px;
-}
-
-html.textomaior {
-  font-size: 150%;
-}
-
-.azul {
-  background: teal;
 }
 
 img {
@@ -40,7 +24,7 @@ body {
   grid-column: 3 / 5;
   margin-top: 2rem;
   margin-bottom: 2rem;
-  background: #fb5;
+  background: #FB5;
 }
 
 .menu ul {
@@ -51,7 +35,7 @@ body {
 
 .menu li a {
   display: block;
-  padding: 15px 10px;
+  padding: 10px;
   margin-right: 10px;
   color: #222;
   text-decoration: none;
@@ -59,7 +43,7 @@ body {
   font-weight: bold;
   text-transform: uppercase;
   font-size: 0.875rem;
-  letter-spacing: 0.1em;
+  letter-spacing: .1em;
 }
 
 .grid-section {
@@ -86,9 +70,9 @@ body {
   font-family: 'IBM Plex Mono', monospace;
   font-size: 1rem;
   text-transform: uppercase;
-  letter-spacing: 0.1em;
+  letter-spacing: .1em;
   margin-bottom: 1rem;
-  color: #e54;
+  color: #E54;
 }
 
 .animais h2::before {
@@ -97,7 +81,7 @@ body {
   width: 40px;
   height: 10px;
   margin-right: 10px;
-  background: #fb5;
+  background: #FB5;
 }
 
 .animais p {
@@ -112,12 +96,16 @@ body {
   grid-column: 2;
 }
 
+.animais-lista li {
+  cursor: pointer;
+}
+
 .animais-lista::-webkit-scrollbar {
   width: 18px;
 }
 
 .animais-lista::-webkit-scrollbar-thumb {
-  background: #fb5;
+  background: #FB5;
   border-left: 4px solid #faf6ed;
   border-right: 4px solid #faf6ed;
 }
@@ -135,15 +123,15 @@ body {
 }
 
 .faq-lista {
-  grid-column: 2 / 4;
+  grid-column: 2 / 4
 }
 
 .faq-lista dt {
   font-family: 'IBM Plex Mono', monospace;
   font-weight: bold;
   margin-top: 2rem;
-  margin-bottom: 0.5rem;
-  color: #e54;
+  margin-bottom: .5rem;
+  color: #E54;
 }
 
 .faq-lista dt::before {
@@ -152,12 +140,12 @@ body {
   width: 20px;
   height: 10px;
   margin-right: 10px;
-  background: #fb5;
+  background: #FB5;
 }
 
 .faq-lista dd {
   font-family: Helvetica, Arial;
-  margin-bottom: 0.5rem;
+  margin-bottom: .5rem;
   margin-left: 30px;
 }
 
@@ -180,13 +168,13 @@ body {
   width: 20px;
   height: 10px;
   margin-right: 10px;
-  background: #fb5;
+  background: #FB5;
 }
 
 .copy {
   grid-column: 3/5;
   margin-bottom: 2rem;
-  background: #fb5;
+  background: #FB5;
 }
 
 .copy p {
@@ -199,9 +187,7 @@ body {
   body {
     grid-template-columns: 1fr;
   }
-  .menu,
-  .grid-section,
-  .copy {
+  .menu, .grid-section, .copy {
     grid-column: 1;
   }
   .grid-section {
@@ -211,9 +197,7 @@ body {
   .animais-lista {
     grid-column: 1;
   }
-  .faq-lista,
-  .dados,
-  .mapa {
+  .faq-lista, .dados, .mapa {
     grid-column: 1 / 3;
   }
   .grid-section h1 {
@@ -233,7 +217,7 @@ body {
 
 .js-tabcontent section.ativo {
   display: block !important;
-  animation: show 0.5s forwards;
+  animation: show .5s forwards;
 }
 
 @keyframes show {
@@ -243,6 +227,35 @@ body {
   }
   to {
     opacity: 1;
-    transform: translate3d(0px, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.js .js-accordion dd {
+  display: none;
+}
+
+.js-accordion dt::after {
+  content: '⬎';
+  margin-left: 10px;
+}
+
+.js-accordion dt.ativo::after {
+  content: '⬏';
+}
+
+.js-accordion dd.ativo {
+  display: block;
+  animation: slideDown .5s forwards;
+}
+
+@keyframes slideDown {
+  from {
+    opacity: 0;
+    max-height: 0;
+  }
+  to {
+    max-height: 200px;
+    opacity: 1;
   }
 }
